Vehicle Odometer page ready!